# adamcuda

./: CMakeLists.txt  README.md  main.cpp
include/: FKDerivative.h  adamcuda.h  totalmodel.h
python/: CMakeLists.txt  pyadamcuda.cpp  test_opt.py  test_pyadamcuda.py  util.py
src/: FKDerivative.cpp  adamcuda.cu
